Make things final